# ComputrGraphics

./: .clang-format  .codespellrc  .gitignore  CMakeLists.txt  CMakePresets.json  ComputerGraphics.sln  Export_8h.html  LICENSE-CC0-1.0.txt  LICENSES.md  README.md  annotated.html  classcg_1_1Mat4.html  classcg_1_1Vec2.html  classcg_1_1Vec3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_c17fa6a672d8637adc92d3261eefb63c.html  files.html  index.html  mat4_8cpp.html  mat4_8hpp.html  modules.html  namespacecg.html  namespaces.html  pages.html  searchdata-v2.js  vec2_8cpp.html  vec2_8hpp.html  vec3_8cpp.html  vec3_8hpp.html
.github/workflows/: ci.yml
ComputerGraphics/: .gitignore  CMakePresets.json  CmakeLists.txt  ComputerGraphics.vcxproj
ComputerGraphics/.github/workflows/: ci.yml
ComputerGraphics/cmake/: coverage.cmake  dev-mode.cmake  install-rules.cmake  variables.cmake
ComputerGraphics/docs/: conf.py.in
ComputerGraphics/examples/: CMakeLists.txt
ComputerGraphics/include/cg/: vec2.hpp  vec3.hpp
ComputerGraphics/src/: vec2.cpp  vec3.cpp
ComputerGraphics/test/source/: vec2_test.cpp  vec3_test.cpp
cmake/: ComputerGraphicsConfig.cmake.in  add_library.cmake  coverage.cmake  docs-ci.cmake  docs.cmake  lint.cmake
docs/: Doxyfile.in
examples/: main.cpp
include/: Export.h  export.h
include/cg/: mat4.hpp  transformations.hpp  vec2.hpp  vec3.hpp  vec4.hpp
src/: mat4.cpp  transformations.cpp  vec2.cpp  vec3.cpp  vec4.cpp
test/: CMakeLists.txt
test/source/: mat4_test.cpp  vec2_test.cpp  vec3_test.cpp
